fix gap

--- a/_scss/about.scss
+++ b/_scss/about.scss
@@ -540,7 +540,7 @@ body {
 }
 
 .card-wrapper {
-    padding: 5px;
+    padding: 1px;
 }
 
 @media (max-width: 992px) {
@@ -637,7 +637,7 @@ body {
     position: absolute;
     right: 100%;
     top: 8px;
-    left: -10px;
+    left: -12px;
 }
 
 .previous-event {
@@ -646,7 +646,7 @@ body {
     position: absolute;
     right: 100%;
     top: 8px;
-    left: -10px;
+    left: -12px;
 }
 
 .floating-nav-trigger {
